unpackaged/main/default/objects/Choice_Case_1st_Type__c/Choice_Case_1st_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Choice - Case 1st Type</label>
</CustomObject>