unpackaged/main/default/objects/Choice_Case_1st_Type__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>"English"</defaultValue>
    <label>Language</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>