unpackaged/main/default/objects/Choice_Case_1st_Type__c/fields/Profile_Ids__c.field-meta.xml
<CustomField>
    <fullName>Profile_Ids__c</fullName>
    <description>Limit the Profiles who have access to this choice</description>
    <label>Profile Ids</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>