unpackaged/main/default/objects/Choice_Case_1st_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Profile_Ids__c</columns>
    <columns>Access_Group__c</columns>
    <columns>Language__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>